--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <!-- <div>hello this is a internal</div> -->
-        <div class="heading"> <a href="ishita.html">Ishita Jalan</a></div>
+        <div class="heading">Ishita Jalan</div>
         <div class="main">
            <!-- <div class="project"> 
                 <img class="project_image" src="images/City_Fence_Banner_Mockup_1copy.jpg">
